--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VblogVueClient",
+  "name": "vblogclientvue",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "WebSkating <494945016@qq.com>",
